<resources>
    <string name="app_name">ianmsutherlandScheduler</string>
    <string name="myTerms">My Terms</string>
    <string name="add_term">Add Term</string>

    <string-array name="terms">
        <item>Spring Term</item>
        <item>Summer Term</item>
        <item>Fall Term</item>
    </string-array>

    <string-array name="startDates">
        <item>July 1</item>
        <item>August 1</item>
        <item>September 1</item>
    </string-array>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="term_name">Term Name</string>
    <string name="term_start_date">Start Date</string>
    <string name="save">Save Term</string>
    <string name="save_term">Save Term</string>
    <string name="cancel">Cancel</string>
    <string name="term_end_date">End Date</string>
    <string name="add_course">Add Course</string>
    <string name="course_name">Course Name</string>
    <string name="course_status">Course Status</string>
    <string name="course_instructor">Course Instructor</string>
    <string name="course_note">Course Notes</string>
    <string name="course_save">Save Course</string>
    <string name="course_start_date">Course Start Date</string>
    <string name="course_end_date">Course End Date</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="course_term">Course Term</string>
    <string name="assessment_name">Assessment Name</string>
    <string name="assessment_start_date">Assessment Start Date</string>
    <string name="assessment_end_date">Assessment End Date</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="assessment_save">Save Assessment</string>
    <string name="instructor_phone">Instructor Phone #</string>
    <string name="instructor_email">Instructor Email</string>
    <string name="main_button">Enter</string>
    <string name="main_title">My Term Scheduler</string>
    <string name="termSeparator">" - "</string>
    <string name="assessment_list">Assessments for Course</string>
    <string name="course_list">Courses for Term</string>

</resources>