<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Course.CourseDetailsActivity">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteX="1dp"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name" />

                <EditText
                    android:id="@+id/editCourseName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_start_date" />

                <EditText
                    android:id="@+id/editCourseStartDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:tooltipText="double press to set date"
                    android:hint="double press to set date"
                    android:text="@string/course_start_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_end_date" />

                <EditText
                    android:id="@+id/editCourseEndDate"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:tooltipText="double press to set date"
                    android:hint="double press to set date"
                    android:text="@string/course_end_date" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_instructor" />

                <EditText
                    android:id="@+id/editCourseInstructorName"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_email" />

                <EditText
                    android:id="@+id/editCourseInstructorEmail"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/instructor_phone" />

                <EditText
                    android:id="@+id/editCourseInstructorPhone"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_status" />

                <Spinner
                    android:id="@+id/editCourseStatus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/course_note" />

                <EditText
                    android:id="@+id/editCourseNote"
                    android:layout_width="wrap_content"
                    android:layout_height="150dp"
                    android:layout_weight="1"
                    android:ems="8"
                    android:gravity="start|top"
                    android:inputType="textMultiLine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:onClick="updateCourseButton"
                    android:text="@string/course_save" />

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="cancelCourse"
                    android:layout_marginHorizontal="20dp"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

            </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp">



            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/assessment_list" />

            <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />
        </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/assessment_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:listitem="@layout/list_item_course"
                android:background="@android:color/darker_gray" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="56dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_input_add"
        android:contentDescription="@string/add_assessment" />


</androidx.constraintlayout.widget.ConstraintLayout>